--- a/PM2E2Grupo1/App.xaml
+++ b/PM2E2Grupo1/App.xaml
@@ -3,6 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PM2E2Grupo1.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <Style TargetType="ContentPage">
+                <Setter Property="BackgroundColor" Value="#FFFFFF" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
